# webcounter

./: log.html  output.xml  report.html
src/: app.py
src/templates/: index.html
src/tests/: resource.robot  type.robot
webcounter/: log.html  pyproject.toml
webcounter/src/tests/: reset.robot
