[tool.poetry]
name = "webcounter"
version = "0.1.0"
description = ""
authors = ["Matti Luukkainen <mluukkai@iki.fi>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.2"

[tool.poetry.group.dev.dependencies]
robotframework = "^7.3.2"
robotframework-seleniumlibrary = "^6.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
